--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, internal-scale=1">
   <title>(The 2nd) Best Page in the Universe</title>
   <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
   <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Josefin+Sans" rel="stylesheet">
@@ -36,7 +37,6 @@
         Some people have an ability to write placeholder text... It's an art you're basically born with.
         You either have it or you don't.
       </p>
-      <br>
       <p class="p_bio">
         Lorem Ispum is a choke artist. It chokes! All of the words in Lorem Ipsum have flirted with me
         - consciously or unconsciously. That's to be expected. Lorem Ipsum best not make any more
